--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="navbar">
-    <div class="logo">Workit</div>
-    <div class="Apply">Apply</div>
-  </div>
-
-  
-  <div class="header">
-    <div class="main-text">
-      <p>Data tailored to your needs.</p>
+  <div class="container">
+    <div class="navbar">
+      <div class="logo"><b>work</b>it</div>
+      <div class="apply"><span>Apply for access</span></div>
     </div>
-    <button class="learn">Learn More</button>
+    <div class="header">
+      <div class="main-text">
+        <p>Data <span>tailored</span> to</p>
+        <p>your needs.</p>
+      </div>
+      <button class="learn-button">Learn More</button>
+    </div>
+
   </div>
+  
 
   <!-- <img src="media/#" alt="A picture of a smartphone"> -->
-
+  
   <div class="middle-data">
     <div class="one-data">
       <p>1</p>
@@ -40,6 +43,7 @@
       <p>Always affordable pricing that scales with..</p>
     </div>
   </div>
+  
   <div class="last-data">
     <img src="" alt="A picture of a dude">
     <div class="message">
