--- a/index.html
+++ b/index.html
@@ -20,30 +20,28 @@
       <button class="learn-button">Learn More</button>
     </div>
 
+    <!-- <img class="phone" src="media/smartphone-png-transparent-22.png" alt="A picture of a smartphone"> -->
   </div>
-  
-
-  <!-- <img src="media/#" alt="A picture of a smartphone"> -->
   
   <div class="middle-data">
     <div class="one-data">
-      <p>1</p>
+      <p class="number one">1</p>
       <p>Actionable insights</p>
       <p>Optimize your products, improve costumer satisfaction
         and stay ahead of the comptettion with our product data analytics.</p>
     </div>
     <div class="two-data">
-      <p>2</p>
+      <p class="number two">2</p>
       <p>Data-driven decisions</p>
       <p>Make data-driven decisions...</p>
     </div>
     <div class="three-data">
-      <p>3</p>
+      <p class="number three">3</p>
       <p>Always affordable</p>
       <p>Always affordable pricing that scales with..</p>
     </div>
   </div>
-  
+
   <div class="last-data">
     <img src="" alt="A picture of a dude">
     <div class="message">
