--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
 </head>
 <body>
   
+  <header>
+    <img src="media/logo-light.svg" alt="workit logo">
+    <div class="apply">Apply for access</div>
+  </header>
+
+  <main>
+    <div class="hero-container">
+      <div class="hero-content">
+        <h1>Data <span>tailored</span> to your needs.</h1>
+        <button class="hero-button">Learn More</button>
+      </div>  
+    </div>
+
+
+
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 </html>
