--- a/index.html
+++ b/index.html
@@ -21,6 +21,46 @@
       </div>  
     </div>
 
+    <div class="hero-image">
+      <img src="media/image-hero.webp" alt="hero-image">
+    </div>
+    
+    <div class="features-container">
+      <div class="features-items">
+        <div class="feature-box">
+          <div class="number-circle">1</div>
+          <div class="feature-text">
+            <h3>Actionable insights</h3>
+            <p>Optimize your products, improve customer satisfaction and stay ahead of the competition
+              with our product data analytics.</p>
+          </div>
+        </div>
+        <div class="feature-box">
+          <div class="number-circle">2</div>
+            <h3>Data-driven decisions</h3>
+            <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help
+              you unlock insights hidden in your product data.</p>
+        </div>
+        <div class="feature-box">
+          <div class="number-circle">3</div>
+          <h3>Always affordable</h3>
+
+          <p>Always affordable pricing that scales with your business. Get top-quality product data
+            analytics services without hidden costs or unexpected fees.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="call-to-action">
+      <img src="" alt="">
+      <div class="call-to-action-box">
+        <h2>Be the first to test</h2>
+        <p>Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a
+          beta tester for our app and kickstart your company. Apply for access below and I’ll be
+          in touch to schedule a call.</p>
+          <button>Apply for access</button>
+      </div>
+    </div>
 
 
   </main>
